<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="122dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="43dp"
            android:layout_height="113dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/X1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ediTextx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="43dp"
            android:layout_height="113dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Y1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextY1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="113dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="43dp"
            android:layout_height="113dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/X2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextX2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="111dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="43dp"
            android:layout_height="113dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Y2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextY2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="189dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnmedio"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:text="@string/PuntoMedio" />

        <Button
            android:id="@+id/btnpendiente"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:text="@string/Pendiente" />

        <Button
            android:id="@+id/btncuadrante"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:text="@string/Cuadrente" />
    </LinearLayout>
</LinearLayout>